    * "string is visible" [James Paige]
    * "set/get color", "rgb", "extract color" [Mike Caron]
    * "load palette" [Ralph Versteegen]
    * HSPEAK no longer produces a warning for while(true). Endless while loops
      were already useful, and the new "break" flow control command has
      made them even more useful.
    * "main menu" [James Paige]

  * Unlump.exe
    * Ported to FreeBasic [Mike Caron]
    * Output directory defaults to gamename.rpgdir [James]
    * When run without arguments, tells windows users to
      drag-and-drop [James]
    * Can be used to unlump other lumped files too; cleans up on error [Ralph]

  * Stuff only Developers Will Notice
    * FreeBASIC 0.16b and newer support [Ralph]
    * Removal of some QuickBasic-specific code
    * New common.bas for code shared by game and custom
    * New util.bas for code that does not depend on any other part
      of the OHR
    * Some rewritten map wrapping code [Ralph Versteegen]
    * Rewritten Game & Custom map loading and saving [Ralph, James]
    * Internal data formats for NPCs rewritten with UDTs [Mike]
    * Same for inventory [Ralph]
    * Internal data formats for battle sprites (heroes, enemies, attacks)
      rewritten to use UDT's (in-progress) [James Paige]
    * Hspeak's exit code is 2 if there were warnings [Mike Caron]
    * Use keyval(-1) to detect when the OS has requested the program
      to exit
    * New internal master palette format has higher colour precision: 8 bits
      instead of 6, and multiple palettes [Ralph]
    * Cool experimental gfx_smooth2x graphics backend [Reaxor Jones]
    * Experimental gfx_sdl graphics backend (may eventually become default
      on Linux) [James Paige]

July 09 2006 [hasta-la-qb]
  * This is the final version to support a real DOS version (GAME-QB and
    CUSTOMQB) You should be using the Windows or Linux versions already
    anyway.

  * New Features
    * Input string gets 3 new arguments, center, positionx, positiony.