@@ -275,6 +275,10 @@ define function, begin
 266,extractcolor,2,0,0		  #extracts an RGB component from a 32-bit color(color, component)
 267,mainmenu,0                #opens the main menu
 268,loadpalette,1,0           #load master palette
+269,totalexperience,1,0       #experience gained by a hero
+270,experiencetolevel,1,0     #total experience to reach a level
+271,experiencetonextlevel,1,0 #experience to level up
+272,setexperience,3,0,0,1     #set total experience (who,amount,allow spell forgetting)
 #2xx,getnpcraw,2,0,0          #raw npc data(who,which)
 #2xx,setnpcraw,3,0,0,0        #raw npc data(who,which,val)
 end
